# lingmo-sdk

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
cmake/: LingmoSdkConfig.cmake
debian/: changelog  control  copyright  liblingmosdk-dev.install  liblingmosdk1.install  rules
examples/basic-app/: CMakeLists.txt
examples/basic-app/src/: Main.qml
examples/custom-style/: CMakeLists.txt
examples/custom-style/src/: main.cpp
examples/system-integration/: CMakeLists.txt
examples/system-integration/src/: Main.qml
rpm/: lingmo-sdk.spec
